src/objects/CMD_Request_SAP_Mass_Update_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>SAP_CMD__r.Account_Name__c</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMD_Request__c</fullName>
        <label>CMD Request</label>
        <referenceTo>CMD_Request__c</referenceTo>
        <relationshipLabel>CMD Request SAP Mass Update Details</relationshipLabel>
        <relationshipName>CMD_Request_SAP_Mass_Update_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City_New__c</fullName>
        <label>City New</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Old__c</fullName>
        <label>City Old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_New__c</fullName>
        <label>Country New</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abkhazia</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Akrotiri And Dhekelia</fullName>
                </value>
                <value>
                    <fullName>Åland</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Old__c</fullName>
        <label>Country_Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funloc__c</fullName>
        <label>Funloc</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name_New__c</fullName>
        <label>Legal Name New</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name_Old__c</fullName>
        <label>Legal Name Old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Update_Type__c</fullName>
        <formula>TEXT(CMD_Request__r.Mass_Update_Type__c)</formula>
        <label>Mass Update Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_New__c</fullName>
        <label>Name 2 New</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_Old__c</fullName>
        <label>Name 2 Old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3_New__c</fullName>
        <label>Name 3 New</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3_Old__c</fullName>
        <label>Name 3 Old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_4_New__c</fullName>
        <label>Name 4 New</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_4_Old__c</fullName>
        <label>Name 4 Old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_CMD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP CMD</label>
        <referenceTo>SAP_CMD__c</referenceTo>
        <relationshipLabel>CMD Request SAP Mass Update Details</relationshipLabel>
        <relationshipName>CMD_Request_SAP_Mass_Update</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province_New__c</fullName>
        <label>State / Province New</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_Old__c</fullName>
        <label>State / Province Old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_4_New__c</fullName>
        <label>Street 4 New</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_4_Old__c</fullName>
        <label>Street 4 Old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_New__c</fullName>
        <label>Street New</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Old__c</fullName>
        <label>Street Old</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZA_New__c</fullName>
        <label>ZA New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZA_Old__c</fullName>
        <label>ZA Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZS_New__c</fullName>
        <label>ZS New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZS_Old__c</fullName>
        <label>ZS Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_New__c</fullName>
        <label>Zip New</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Old__c</fullName>
        <label>Zip Old</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CMD Request SAP Mass Update Detail</label>
    <nameField>
        <displayFormat>CRSMUD{0000000000}</displayFormat>
        <label>CMD Request SAP Mass Update Detail Numbe</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMD Request SAP Mass Update Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>